[fix] changed photo value parse class from URL to URI